--- a/frontend/react/.env
+++ b/frontend/react/.env
@@ -4,3 +4,4 @@ API_SQLSERVER_URL=https//default.dev.api_sqlserver.com
 OIDC_CLIENT_ID=0oa4juv4poiQ6nDB6297
 OIDC_ISSUER=https://test.idp.idm.cms.gov/oauth2/aus4itu0feyg3RJTK297
 OIDC_ISSUER_URL=https://test.idp.idm.cms.gov
+PRINCE_API_ENDPOINT=https://f6y1eb1jw5.execute-api.us-east-1.amazonaws.com/fiveoheight/prince
